--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/style.css">
     </head>
-    <body style="background: white;">
+    <body>
 
         <div style="max-width: 720px; margin: 0 auto; padding: 0 var(--container-padding);">
             <br>
@@ -17,11 +17,30 @@
 
             <br>
             <br>
+            <h2>.button__icon</h2>
+
+            <button class="button" type="button">
+                Сдать ЕГЭ на 100 баллов с нами
+                <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
+                    <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
+                </svg>
+            </button>
+
+
+            <br>
+            <br>
             <br>
             <h2>.button--secondary</h2>
+            <div style="background: #FC5E38; padding: 20px;">
 
-            <button class="button button--secondary" type="button">Отмена</button>
+                <button class="button button--secondary" type="button">
+                    Записаться на пробный урок
+                    <svg class="button__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
+                        <path d="M11.767 4.955c.44-.44 1.152-.44 1.591 0l6.75 6.75c.44.439.44 1.151 0 1.59l-6.75 6.75a1.125 1.125 0 0 1-1.591-1.59l4.83-4.83H4.686a1.125 1.125 0 0 1 0-2.25h11.91l-4.83-4.83a1.125 1.125 0 0 1 0-1.59Z"/>
+                    </svg>
+                </button>
 
+            </div>
             <br>
             <br>
             <br>
