--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -41,13 +41,33 @@
                 </button>
 
             </div>
-            <br>
+
             <br>
             <br>
             <br>
             <h2>:disabled</h2>
 
             <button class="button" type="button" disabled>Отправить</button>
+            <button class="button" type="button" disabled>Отправить</button>
+
+            <br>
+            <br>
+            <br>
+            <h2>.button--loading</h2>
+
+            <button class="button button_loading" type="button">Отправить</button>
+
+            <button class="button button--secondary button_loading" type="button">Отправить</button>
+
+
+            <br>
+            <br>
+            <br>
+            <h2>.button--success</h2>
+
+            <button class="button button_success" type="button">Отправить</button>
+
+            <button class="button button--secondary button_success" type="button">Отправить</button>
 
 
             <br>
