--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -65,9 +65,9 @@
             <br>
             <h2>.button--success</h2>
 
-            <button class="button button_success" type="button">Отправить</button>
+            <button class="button button--success" type="button">Отправить</button>
 
-            <button class="button button--secondary button_success" type="button">Отправить</button>
+            <button class="button button--secondary button--success" type="button">Отправить</button>
 
 
             <br>
