--- a/src/markups/_button.html
+++ b/src/markups/_button.html
@@ -55,9 +55,9 @@
             <br>
             <h2>.button--loading</h2>
 
-            <button class="button button_loading" type="button">Отправить</button>
+            <button class="button button--loading" type="button">Отправить</button>
 
-            <button class="button button--secondary button_loading" type="button">Отправить</button>
+            <button class="button button--secondary button--loading" type="button">Отправить</button>
 
 
             <br>
@@ -68,6 +68,15 @@
             <button class="button button--success" type="button">Отправить</button>
 
             <button class="button button--secondary button--success" type="button">Отправить</button>
+
+            <br>
+            <br>
+            <br>
+            <h2>.button--warning</h2>
+
+            <button class="button button--warning" type="button">Отправить</button>
+
+            <button class="button button--secondary button--warning" type="button">Отправить</button>
 
 
             <br>
