--- a/src/markups/_input.html
+++ b/src/markups/_input.html
@@ -12,6 +12,9 @@
             <br>
             <br>
             <h1>.input</h1>
+            <p>
+                Стандартный, дефолтный инпут, в таком виде пока не встречается.
+            </p>
 
             <div class="input">
                 <input class="input__widget" type="text" placeholder="Ваше имя">
@@ -24,9 +27,6 @@
             </div>
 
 
-
-            <br>
-            <br>
             <br>
             <h2>:disabled</h2>
 
@@ -37,6 +37,33 @@
             <br>
 
             <div class="input">
+                <input class="input__widget" type="text" placeholder="Ваше имя" value="Konstantin Konstantinopolsky" disabled>
+            </div>
+
+            <br>
+            <br>
+            <br>
+            <h2>.input--inverted</h2>
+
+            <div class="input input--inverted">
+                <input class="input__widget" type="text" placeholder="Ваше имя">
+            </div>
+
+            <br>
+
+            <div class="input input--inverted">
+                <input class="input__widget" type="text" placeholder="Ваше имя" value="Константин Константинопольский">
+            </div>
+
+            <br>
+
+            <div class="input input--inverted">
+                <input class="input__widget" type="text" placeholder="Ваше имя" disabled>
+            </div>
+
+            <br>
+
+            <div class="input input--inverted">
                 <input class="input__widget" type="text" placeholder="Ваше имя" value="Konstantin Konstantinopolsky" disabled>
             </div>
 
