--- a/src/markups/_term.html
+++ b/src/markups/_term.html
@@ -22,8 +22,12 @@
                     </i>
                 </label>
 
-                <br>
-                <br>
+            </div>
+
+            <br>
+            <h2>:disabled</h2>
+
+            <div style="background: #FC5E38; padding: 20px;">
 
                 <label class="term">
                     <input class="term__widget" type="checkbox" disabled>
@@ -42,6 +46,31 @@
                 </label>
 
             </div>
+
+            <br>
+            <h2>.term--loading</h2>
+
+            <div style="background: #FC5E38; padding: 20px;">
+
+                <label class="term term--loading">
+                    <input class="term__widget" type="checkbox" disabled>
+                    <span class="term__label">Согласен(а) на обработку персональных данных</span>
+                    <i class="term__icon" role="presentation">
+                        <i class="term__check"></i>
+                    </i>
+                </label>
+
+                <label class="term term--loading">
+                    <input class="term__widget" type="checkbox" disabled checked>
+                    <span class="term__label">Согласен(а) на обработку персональных данных</span>
+                    <i class="term__icon" role="presentation">
+                        <i class="term__check"></i>
+                    </i>
+                </label>
+
+            </div>
+
+
             <br>
             <br>
             <br>
